# better-zsh

./: .editorconfig  .gitignore  .vscode-test.mjs  .vscodeignore  AGENTS.md  CLI-VISUAL-POLICY.md  DESIGN.md  DEVELOPMENT.md  HANDOFF-param-expn.md  Makefile  PRINCIPLES.md  README.md  RELEASE-HANDOFF.md  SECURITY.md  TEST-STATUS.md  THIRD_PARTY_NOTICES.md  biome.jsonc  build.ts  language-configuration.json  package.json  plan-json-artifacts.md  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.claude/skills/: orient
.cursor/rules/: orient.mdc  scripts
.github/: dependabot.yml
.github/workflows/: ci-rust.yml  ci.yml  docs-zsh-core.yml  release-extension.yml  release-mcp.yml  release-zsh-core.yml  release-zshref-mcp.yml
.opencode/skills/orient/: SKILL.md
packaging/homebrew-tap/: .gitignore  README.md
packaging/homebrew-tap/.github/workflows/: brew-audit.yml
packaging/homebrew-tap/Formula/: zshref.rb
scripts/: test-integration-act  testINTERACTIVE-bundled  testINTERACTIVE-electron  update-grammar  upstream-ready.mjs  verify-upstream-contract.mjs
skills/orient/: SKILL.md
skills/orient/scripts/: exports.sh  overview.sh  providers.sh  test-smoke.sh
src/: cache.ts  cmd-position.ts  comment.ts  completions.ts  context.ts  definition.ts  diagnostics.ts  doc-link.ts  extension.ts  funcs.ts  highlight.ts  hover-dump.ts  hover-md.ts  hover.ts  log.ts  option-match.ts  references.ts  rename.ts  semantic-tokens.ts  setopt-context.ts  symbols.ts  workspace-symbols.ts  zsh-data.ts  zsh-exec.ts  zsh.ts
src/core/: context.ts  zsh-data.ts  zsh.ts
src/core/yodl/: options.ts
src/dev/: dump-hover.ts
src/test/: brand.test.ts  cmd-position.test.ts  context.test.ts  doc-link.test.ts  funcs.test.ts  hover-md.test.ts  hover.test.ts  option-match.test.ts  parse-stderr.test.ts  semantic-tokens.test.ts  setopt-context.test.ts  token-filter.test.ts  yodl-cond-ops.test.ts  yodl-options.test.ts  yodl-parse.test.ts  zsh-env.test.ts
src/test/bundled/: activation.test.ts
src/test/bundled/stub-ext/: package.json
src/test/integration/: completions.test.ts  diagnostics.test.ts  helpers.ts  highlight.test.ts  hover-provider.test.ts  navigation.test.ts
src/types/: brand.ts  lang-config.ts  snippet.ts  zsh-data.ts
src/yodl/: builtins.ts  cond-ops.ts  options.ts  parse.ts
syntaxes/: shell-unix-bash.tmLanguage.json
test-fixtures/: hover0.zsh  hover1.zsh  syntax-error.zsh
zshref-rs/: Cargo.toml  DATA-SYNC.md  DEVELOPMENT.md  EXTRACTION.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build.rs
zshref-rs/Formula/: zshref.rb
zshref-rs/src/: cli.rs  corpus.rs  fuzzy.rs  main.rs  output.rs
zshref-rs/src/tools/: classify.rs  describe.rs  docs.rs  info.rs  list.rs  lookup_option.rs  mod.rs  search.rs  shared.rs
zshref-rs/tests/: fuzz.proptest-regressions  fuzz.rs  integration.rs  styled_help.rs
zshref-rs/tests/fixtures/classify/: auto_cd.json  bogus.json  double_bracket.json  echo.json  no_notify.json
zshref-rs/tests/fixtures/describe/: builtin_echo.json  builtin_nope.json  option_autocd.json
zshref-rs/tests/fixtures/docs/: auto_cd.json  bogus.json  builtin_echo.json  double_bracket.json  echo.json  for_multi_match.json  job_spec_template_key.json  no_auto_cd.json  no_notify.json  not_an_option.json  notify.json  option_autocd.json
zshref-rs/tests/fixtures/list/: category_option_limit_3.json  category_reserved_word_limit_5.json  default_limit_5.json  limit_zero.json
zshref-rs/tests/fixtures/lookup_option/: auto_cd.json  no_auto_cd.json  not_an_option.json  notify.json
zshref-rs/tests/fixtures/search/: category_option_limit_3.json  category_reserved_word_limit_5.json  empty_limit_5.json  limit_zero.json  no_hits.json  query_echo_builtin_limit_3.json  query_printf.json
