[package]
name = "zshref"
version = "0.1.0-alpha.0"
edition = "2021"
description = "Query the bundled static zsh reference from the command line."
license = "MIT"
publish = false

[[bin]]
name = "zshref"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["string", "wrap_help", "color", "suggestions"] }
clap_complete = "4.5"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
nucleo-matcher = "0.3"

[dev-dependencies]
proptest = "1"

[profile.release]
lto = "thin"
strip = true
